# creator_set_rust

./: Cargo.toml
assets/: white.avif
src/: main.rs
src/common/: mod.rs  write_text_into_image.rs
